--- a/src/components/QuestionFormStyles.scss
+++ b/src/components/QuestionFormStyles.scss
@@ -1,8 +1,7 @@
-form {
+#questionForm {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  color: white;
   width: 100%;
 }
 
@@ -22,4 +21,8 @@ form li {
   width:100%;
   height: 150px;
   overflow-y: scroll;
+}
+
+#questionFormList {
+  padding-inline-start: 0px;
 }
